# MangaEngine

./: CMakeLists.txt  Messages.sh
package/: metadata.desktop
package/contents/code/: main.py  mangafox.py
